testsuite/tests/dependent/should_fail/T16326_Fail5.stderr

T16326_Fail5.hs:7:20: error:
    • Illegal visible, dependent quantification in the type of a term:
        forall a1 -> Maybe a1
      (GHC does not yet support this)
    • In a pattern type signature: forall a -> Maybe a
      In the pattern: Nothing :: forall a -> Maybe a
      In an equation for ‘isJust’:
          isJust (Nothing :: forall a -> Maybe a) = False
